.vscode/allianceuat_compare/force-app/main/default/objects/tc9_et__Invoice_Item__c/fields/Assignment_Invoice_Name__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Invoice_Name__c</fullName>
    <formula>tc9_et__Assignment__r.Invoice_Name__c</formula>
    <label>Assignment Invoice Name</label>
    <type>Text</type>
</CustomField>