.vscode/allianceuat_compare/force-app/main/default/objects/tc9_et__Invoice_Item__c/fields/BranchState__c.field-meta.xml
<CustomField>
    <fullName>BranchState__c</fullName>
    <formula>tc9_et__Assignment__r.Branch__r.Branch_Name__c + &quot; - &quot; + TEXT(tc9_et__Assignment__r.Branch__r.State__c)</formula>
    <label>BranchState</label>
    <type>Text</type>
</CustomField>