.vscode/allianceuat_compare/force-app/main/default/objects/tc9_et__Invoice_Item__c/fields/Formula_Field_Invoice_InvoiceItem_Assign__c.field-meta.xml
<CustomField>
    <fullName>Formula_Field_Invoice_InvoiceItem_Assign__c</fullName>
    <formula>tc9_et__Assignment__r.Branch__r.GL_Department__r.Name + Natural_Account__r.Name</formula>
    <label>CostCentreCode</label>
    <type>Text</type>
</CustomField>