.vscode/allianceuat_compare/force-app/main/default/objects/tc9_et__Invoice_Item__c/fields/Natural_Account__c.field-meta.xml
<CustomField>
    <fullName>Natural_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Natural Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>tc9_bgl__Acc_Segments__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Natural Account</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>tc9_bgl__Acc_Segments__c</referenceTo>
    <relationshipLabel>Invoice Items</relationshipLabel>
    <relationshipName>Invoice_Items</relationshipName>
    <type>Lookup</type>
</CustomField>