.vscode/allianceuat_compare/force-app/main/default/objects/tc9_et__Invoice_Item__c/fields/ResourceNumber__c.field-meta.xml
<CustomField>
    <fullName>ResourceNumber__c</fullName>
    <formula>IF(
    NOT(ISBLANK(tc9_et__Employee__r.aa_RDB_Legacy_ID__c)),
    tc9_et__Employee__r.aa_RDB_Legacy_ID__c,
    tc9_et__Employee__r.Id
)</formula>
    <label>ResourceNumber</label>
    <type>Text</type>
</CustomField>