.vscode/allianceuat_compare/force-app/main/default/objects/tc9_et__Invoice_Item__c/fields/Retrigger_TSE_stamp__c.field-meta.xml
<CustomField>
    <fullName>Retrigger_TSE_stamp__c</fullName>
    <defaultValue>false</defaultValue>
    <description>ALN-479</description>
    <label>Retrigger TSE stamp</label>
    <type>Checkbox</type>
</CustomField>