.vscode/allianceuat_compare/force-app/main/default/objects/tc9_et__Invoice_Item__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <formula>(IF(tc9_et__Invoice_Total_Inc_Tax__c &gt; 0, &quot;Invoice&quot;, IF(tc9_et__Invoice_Total_Inc_Tax__c &lt; 0, &quot;Credit&quot;, &quot;&quot;)))</formula>
    <label>Type</label>
    <type>Text</type>
</CustomField>